PTRI - intégration des devs de MHAS

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -29,3 +29,10 @@ resources.db.params.password = "";
 phpSettings.display_startup_errors = 1
 phpSettings.display_errors = 1
 
+;configuration des sessions
+;resources.session.name = calender
+session.auto_start = 1
+resources.session.save_path = APPLICATION_PATH "/sessions"
+resources.session.use_only_cookies = true
+resources.session.remember_me_seconds = 0
+strict = 0
