--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -19,7 +19,7 @@ resources.view[] =
 
 ;configure l'accès à la base de données
 resources.db.adapter = "PDO_MYSQL";
-resources.db.params.dbname = "conges_csm";
+resources.db.params.dbname = "conges";
 resources.db.params.host = "localhost";
 resources.db.params.username = "root";
 resources.db.params.password = "";
