MBA : Commit Calendrier Beta (version incomplete)

--- a/application/configs/application.ini
+++ b/application/configs/application.ini
@@ -23,6 +23,7 @@ resources.db.params.dbname = "conges_csm";
 resources.db.params.host = "localhost";
 resources.db.params.username = "root";
 resources.db.params.password = "";
+resources.db.params.charset = utf8
 
 ;section development, hérite de production (":")
 [development : production]
